--- a/HW9_10_WPF/MainWindow.xaml
+++ b/HW9_10_WPF/MainWindow.xaml
@@ -7,7 +7,5 @@
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-       
-    </Grid>
+    <Grid/>
 </Window>
